--- a/notebooks/hello_world.ipynb
+++ b/notebooks/hello_world.ipynb
@@ -1,9 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "9c436693-d2a7-44c1-aa27-a7c862998c29",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "de324062-104f-4ada-afd2-48dadfa22ee0",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4060319939.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    __Author__: Dr. Beadling. For any questions regarding the contents of this notebook please contact rebecca.beadling@temple.edu.\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "### It is considered a best practice to begin your Jupyter Notebook with informative text written using a Markdown cell that describes the purpose of the code within the notebook. This will help you remember what your goal of the notebook is and will help any user of your code become oriented to your notebook.\n",
     "\n",
@@ -42,12 +53,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ede21056-bc4e-4f95-9ce4-35fd6eed63a8",
+   "metadata": {},
+   "source": [
+    "## Life sucks but at least there is chocolate\n",
+    "# Now this is **BIGGER**!\n",
+    "\n",
+    "### _Fancy_\n",
+    "\n",
+    "Three things I **need** are:\n",
+    "- chocolate\n",
+    "- money\n",
+    "- rocks\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e3e9134a-56de-41f8-b2f8-1990134714f5",
+   "execution_count": 13,
+   "id": "c8972adc-d4d1-4b6c-84fa-412118ab74ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#### _Give it to me baby_"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,13 +95,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "ee09737a-2c2e-4fe5-8f4c-e415afb36a29",
+   "cell_type": "markdown",
+   "id": "283f5b9c-aa3c-4491-bf56-e8b574b1ad14",
+   "metadata": {},
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a5404ee-ed2e-46c2-a5ad-0a14d8f6b3ce",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
     "# anything within a code cell preceeded by a '#' is considered a \"comment\" and thus is not executed.\n",
     "# import the entire numpy library, giving it the alias 'np'\n",
@@ -80,6 +115,25 @@
     "\n",
     "# import the matplotlib library for plotting, giving it the alias 'plt'\n",
     "import matplotlib.pyplot as plt  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4305d517-b475-4a90-ab56-550d16021219",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2400170640.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[16], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    __import__(numpy) as np\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "__import__(numpy) as np"
    ]
   },
   {
@@ -94,13 +148,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "e5743e56-a5bd-44a9-bb89-ef2fd2ad8892",
+   "cell_type": "markdown",
+   "id": "d36106c4-7ac0-4cea-9005-58670e0e20b5",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
     "%matplotlib inline                           \n",
     "%config InlineBackend.figure_format='retina' \n",
@@ -119,8 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f408fb5c-9b9a-4c6f-82ad-7df15790425a",
+   "execution_count": 1,
+   "id": "18516c0e-2a82-4bfc-9bec-5bf0ddcf4176",
    "metadata": {},
    "outputs": [
     {
@@ -128,13 +180,15 @@
      "output_type": "stream",
      "text": [
       "Hello World!\n",
-      "6\n"
+      "6\n",
+      "2+4\n"
      ]
     }
    ],
    "source": [
     "print(\"Hello World!\") ## the print function prints out the expression inside of the ( ).\n",
-    "print(2+4)"
+    "print(2+4)\n",
+    "print(\"2+4\")"
    ]
   },
   {
@@ -151,7 +205,9 @@
    "id": "70d7a347-e277-4bbc-800c-75db004ded38",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Because the python interprets anything in quotes to be text (string)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -460,7 +516,10 @@
    "id": "9e9cb565-8090-4dd2-8720-03d0ccb8db08",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 4, 128, 5, 2,-1, 1 are integers. Floats are 5.667, 0.25 and 400000.0.\n",
+    "## Python cannot read intergers and floats in one equation so it will not calculate anything."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -472,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "1c7a214b-1b81-4c9d-bb4e-bcbe212a1dae",
    "metadata": {
     "tags": []
@@ -494,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "cb459bd9-a9c7-4051-a6b7-f967dc4d4352",
    "metadata": {
     "tags": []
@@ -546,17 +605,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "8c6d2ca1-c236-437a-a22d-9b32ecbba329",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12 8 Dr. Beadling 20 45\n"
+     "ename": "NameError",
+     "evalue": "name 'width' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(a,b,name,\u001b[43mwidth\u001b[49m,height)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'width' is not defined"
      ]
     }
    ],
@@ -574,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "9b58d17a-868d-4afc-ae4e-01141669d4e8",
    "metadata": {
     "tags": []
@@ -594,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "35748816-5dfc-4112-bcf7-3dd83866e931",
    "metadata": {
     "tags": []
@@ -614,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "60bf5a0f-7a98-4072-ba15-fb1dee1afbd9",
    "metadata": {
     "tags": []
@@ -678,9 +741,9 @@
    "source": [
     "### <span style=\"color:red\"> Before you run the cells below, make a prediction of whether the boolean value returned will be `True` or `False`\n",
     "\n",
-    "#### <span style=\"color:red\"> __Prediction Cell 1:__ \n",
-    "#### <span style=\"color:red\"> __Prediction Cell 2:__ \n",
-    "#### <span style=\"color:red\"> __Prediction Cell 3:__ "
+    "#### <span style=\"color:red\"> __Prediction Cell 1:__ ##falso\n",
+    "#### <span style=\"color:red\"> __Prediction Cell 2:__  ##true\n",
+    "#### <span style=\"color:red\"> __Prediction Cell 3:__ ## true"
    ]
   },
   {
@@ -768,35 +831,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c5bf91c4-f641-4ea3-80b9-4a26b465dc62",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7 != 90"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4b3a254f-43b3-4629-893a-234b5a6f6960",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "90 == 90"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5ce0e508-ac29-40f2-b308-2d547a7c8d24",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "678 >= 7000"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e115a89d-7d36-484d-b7c7-9883b46dd5c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7000 == 7000"
+   ]
   },
   {
    "cell_type": "code",
@@ -944,11 +1059,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4a8a6968-58cc-49c3-b546-4e25334490d9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## From left to right, integer, string, integer, float, string, integer, integer "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -970,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "df940619-ccc7-457d-a3d5-52dc71a35847",
    "metadata": {
     "tags": []
@@ -988,7 +1105,7 @@
        " 'python']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,11 +1127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4e05c6ad-529f-4ad1-bb80-55c8f360d1dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(our_test_list[0]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1028,11 +1155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c86e277b-d7a7-4efc-82b3-ce50eb0196cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('string')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1052,15 +1189,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "ffd74c4c-3711-4106-8e21-2de2848c5bea",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code\n",
+      "Favtutor\n"
+     ]
+    }
+   ],
    "source": [
-    "print(our_test_list[0])\n",
-    "print(our_test_list[1])"
+    "print(our_test_list[0]) ## Code\n",
+    "print(our_test_list[1]) ##Favtutor"
    ]
   },
   {
@@ -1073,13 +1219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "80bb2487-262a-446b-878a-3b26e8f0a3ed",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(our_test_list[6])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1164,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "afa54ad9-7216-43da-bafa-7d4e878eacae",
    "metadata": {
     "tags": []
@@ -1176,7 +1332,7 @@
        "'Code'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,24 +1429,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "b74cbe5e-6680-4a6b-90ee-576a916a7902",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Machine Learning', 'Students', 'Studies', 'java']"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "## Python reads the second number as up to not including/."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1302,13 +1449,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "522dc659-1b00-46a1-b8ae-8ec6a7a2a65d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "our_test_list[2:6] \n",
+    "our_test_list[-1:-7]\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1346,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "41f5052f-f26f-4b91-865d-33e45d233a4e",
    "metadata": {
     "tags": []
@@ -1358,7 +1519,7 @@
        "['apple', 'banana', 'orange']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "7cd103d3-5957-4308-ae51-142e4977d634",
    "metadata": {
     "tags": []
@@ -1382,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "31a9099b-7be2-4846-a916-731570b52743",
    "metadata": {
     "tags": []
@@ -1394,7 +1555,7 @@
        "['grape', 'banana', 'orange']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "8b84d6a2-7b49-4f9f-a417-ebfacedafb61",
    "metadata": {
     "tags": []
@@ -1431,7 +1592,7 @@
        "('apple', 'banana', 'orange')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "id": "10b1f920-9b49-4503-a2b8-eb121c572273",
    "metadata": {
     "tags": []
@@ -1452,10 +1613,10 @@
     {
      "data": {
       "text/plain": [
-       "'apple'"
+       "'grape'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,14 +1635,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "26aaf2d7-843d-462a-a00c-9de59bdc3efd",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "fruits[0] = \"grape\""
+    "fruits[0] = \"grape\" ##It will list the first element of the list."
    ]
   },
   {
@@ -1494,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "01af1837-5de5-4a67-a769-9c70a961cfdf",
    "metadata": {
     "tags": []
@@ -1506,7 +1667,7 @@
        "dict"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1584,16 +1745,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "3996f77f-e843-4a28-b5b8-7be42e7224d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mypet['age']"
+   ]
   },
   {
-   "cell_type": "markdown",
-   "id": "625f8a54-e3fa-416a-97af-a3b1729f3af2",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d09abb1-532a-4c85-adf4-7fc5468644be",
    "metadata": {},
+   "outputs": [],
    "source": [
     "## After you have completed the task above, complete the following exercises on each link below. DO NOT CLICK SHOW ANSWERS!!! CHALLENGE YOURSELF. If you do not understand something and are stuck, try to work it out with those around you.\n",
     "* ## __[syntax exercises](https://www.w3schools.com/python/exercise.asp?filename=exercise_syntax1)__\n",
@@ -1643,7 +1819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
