--- a/notebooks/Fundamentals_ControlFlow_Functions.ipynb
+++ b/notebooks/Fundamentals_ControlFlow_Functions.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "73c4ed8a-9d36-4d99-a53b-4b8a6e6349c5",
    "metadata": {
     "tags": []
@@ -129,22 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "d78e9fe4-b0cc-4a75-bfa8-c5f9718c1201",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi, Dr. Beadling\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name = 'Dr. Beadling'  # Define a variable called name that is equal to the string, Dr. Beadling\n",
+    "name = 'Dr.Beadling'  # Define a variable called name that is equal to the string, Dr. Beadling\n",
     "\n",
     "if name == 'Dr. Beadling': # our statement that must evaluate to True for this code to execute, i.e., name MUST BE EQUAL TO DR. BEADLING\n",
     "    print('Hi, Dr. Beadling')"
@@ -162,11 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a14d8d13-d6c5-41f6-849b-00f7263eb520",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Ariana\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Changing the name to mine does not execute the function because the function calls for if the name is defined as Dr.Beadling.\n",
+    "## Reverting back to Dr.Beadling executes the function.\n",
+    "## Removing the indent causes syntax error and python cannot understand the command.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,11 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "19aefadb-d17c-45a3-828d-f6b43c3c00ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Ariana\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Ariana'  ## Define the variable with my name.\n",
+    "if name == 'Ariana': ## Have the machine perfrom the function if the varaible name is equal to Ariana is true\n",
+    "     print('Hi, Ariana') ##Complete the function by printing Hi Ariana if the statement is true"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,7 +233,7 @@
     }
    ],
    "source": [
-    "if name != 'George':\n",
+    "if name != 'George': ##Have the machine perform the function if the name is not equal to George than print 'You are not George'\n",
     "    print('You are not George')"
    ]
   },
@@ -239,7 +255,9 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "##My name is already defined, since the element name is not equal to George, but Ariana, it does not perform the above function. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "93811d5c-ba9e-4b72-acf1-e72eb0ff1c50",
    "metadata": {},
    "outputs": [
@@ -286,27 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "29dccd52-94d3-4c0d-b0ad-c720ad780caf",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi George!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name = 'George' # assign value 'George' to variable name\n",
+    "name = 'Nancy' # assign value 'George' to variable name\n",
     "\n",
     "if name == 'Debora': # our statement must evaluate to True for this code below to execute.\n",
     "    print('Hi Debora!') \n",
     "elif name == 'George': # our statement must evaluate to True for this code below to execute.\n",
-    "    print('Hi George!')"
+    "    print('Hi George!')\n",
+    "    ## The function is written only to evaluate if the name is equal to Deborah or George. "
    ]
   },
   {
@@ -334,7 +345,7 @@
     }
    ],
    "source": [
-    "name = 'Dr. Beadling'\n",
+    "name = 'Dr. Beadling' ##The function will print 'Who are you?' because the variable is not equal to Deborah or George \n",
     "\n",
     "if name == 'Debora':\n",
     "    print('Hi Debora!')\n",
@@ -361,7 +372,7 @@
     }
    ],
    "source": [
-    "x = 100\n",
+    "x = 100 ## The function will print positive number because the first statement is true in the command line.\n",
     "if x > 0:\n",
     "    print('Positive Number')\n",
     "elif x < 0:\n",
@@ -420,19 +431,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cf55f69d-9d8b-49c5-b3fb-0ec4a9e0be37",
+   "execution_count": 17,
+   "id": "f4fbaa89-f2af-4c6b-841f-d630759c9b89",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 20\n",
+    "if c == 25:\n",
+    "    print('25')\n",
+    "elif c == 100:\n",
+    "     print('100')\n",
+    "else:\n",
+    "    print('20')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "cf55f69d-9d8b-49c5-b3fb-0ec4a9e0be37",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2087624773.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    else x > 400:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 453\n",
+    "if x > 800:\n",
+    "    print ('first statement')\n",
+    "elif x > 500:\n",
+    "    print ('second statement')\n",
+    "else x > 400:\n",
+    "    print ('third time's a charm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "18157e8a-835e-47f9-b601-7a07ae399e56",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Its a yellow pikmin!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'yellow'  \n",
+    "if name == 'purple':\n",
+    "    print('Purple pikmin')\n",
+    "elif name == 'rock':\n",
+    "    print('Rock pikmin!')\n",
+    "else:\n",
+    "    print('Its a yellow pikmin!')"
+   ]
   },
   {
    "cell_type": "code",
@@ -529,11 +597,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7ebaacbe-2865-4a17-88f8-8aaa130c80fe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "planets\n",
+      "planets\n",
+      "planets\n",
+      "planets\n",
+      "planets\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5 planets\n",
+    "planets = 0 \n",
+    "while planets < 5:             \n",
+    "    print('planets')            \n",
+    "    planets = planets + 1      "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -813,35 +899,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "566929ca-54c2-4897-a6e1-f1b16f3d904a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 0\n",
+    "while p < 4:\n",
+    "    print(p)\n",
+    "    p += 1\n",
+    "     "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "fa5a1758-e17e-465c-a1c2-51d04c5c20ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yellow\n",
+      "purple\n",
+      "white\n",
+      "rock\n"
+     ]
+    }
+   ],
+   "source": [
+    "pikmin = [\"yellow\", \"purple\", \"white\", \"rock\"]\n",
+    "for c in pikmin:\n",
+    "    print(c)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "53f4deea-c6e2-4ce7-b726-3718ec53d6c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pikmin = [\"yellow\", \"purple\", \"white\", \"rock\"]\n",
+    "if pikmin == \"yellow\":\n",
+    "    print(\"yellow is no more\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "69264207-6d45-42fc-a253-2af58339d817",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "i\n",
+      "k\n",
+      "m\n",
+      "i\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "for elements in \"pikmin\":\n",
+    "  print(elements)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -876,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "618796a2-a74c-4dae-914b-f929a77c46db",
    "metadata": {
     "tags": []
@@ -899,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "b176950a-71f0-4aea-b6a9-6831e8b43fc3",
    "metadata": {
     "tags": []
@@ -927,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8b598fa3-5982-4c6e-a344-b9141e19b6c3",
    "metadata": {
     "tags": []
@@ -948,24 +1086,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5f286236-ae50-4887-805f-40c4769e0af0",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "my_first_function() missing 1 required positional argument: 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmy_first_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: my_first_function() missing 1 required positional argument: 'name'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_first_function()"
    ]
@@ -976,24 +1102,18 @@
    "id": "e935f596-5b17-4d64-9016-098205fcf7cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Reports an error because it has no arguments for its input"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "fbb6d2d5-0b08-4618-9de9-c370027a150f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi Becki, this is your first function, woohoo!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_first_function(\"Becki\")  ### Pass a string with a name in it to our function, my_first_function"
    ]
@@ -1013,7 +1133,7 @@
     "tags": []
    },
    "source": [
-    "my_first_function(\"Becki\",\"Beadling\")"
+    "my_first_function(\"Becki\",\"Beadling\") #Nothing happens"
    ]
   },
   {
@@ -1038,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "id": "ba69b6e6-4728-462a-b7f4-cfdeb8640ece",
    "metadata": {
     "tags": []
@@ -1052,20 +1172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 29,
    "id": "9c4bf665-2f62-4b0d-b0b3-1c76aca91ddd",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "T_Kelvin = convert_celcius_to_degrees(5)  # Passes 5 into the convert_celcius_to_degrees_function \n",
+    "T_Kelvin = convert_celcius_to_Kelvin(5)  # Passes 5 into the convert_celcius_to_degrees_function \n",
     "                                          # and saves the result as a new variable, T_Kelvin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 30,
    "id": "f5629e56-4fb2-4b90-8a64-2ebeac494f57",
    "metadata": {
     "tags": []
@@ -1074,10 +1194,10 @@
     {
      "data": {
       "text/plain": [
-       "(278.15, 5)"
+       "278.15"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "id": "34370da9-40d9-4417-9c6e-3eb93c66ff87",
    "metadata": {
     "tags": []
@@ -1112,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 32,
    "id": "ecc6632e-b67f-42b4-8ddb-86099ea2d3c0",
    "metadata": {
     "tags": []
@@ -1124,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 33,
    "id": "bf45fa8a-1daa-4719-9646-e69be0d2a204",
    "metadata": {
     "tags": []
@@ -1136,7 +1256,7 @@
        "(278.15, 5)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,15 +1283,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "id": "85a8c32e-714e-4272-8e27-3a87a05fa7e3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Kelvin = \n",
-    "Celcius = "
+    "Kelvin = [278.15]\n",
+    "Kelvin[0]\n",
+    "Celcius = [5]\n",
+    "Celcius[0]"
    ]
   },
   {
@@ -1190,7 +1323,12 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def convertCtemp():\n",
+    "    Tc - 273.15 = Tk\n",
+    "    (Tc x (9/5)) + 32 = Tf\n",
+    "    return Tc, Tk, Tf"
+   ]
   },
   {
    "cell_type": "code",
@@ -1198,13 +1336,17 @@
    "id": "6cce8675-0aa4-4b22-b46d-511a3431f97c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Cconversion = convertCtemp (36)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "2ba5c088-76c3-4bcb-85ee-2df87bb7a854",
    "metadata": {},
-   "source": []
+   "source": [
+    "Conversion"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1217,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "81ec3287-38d6-4d96-ab34-d546f8a00a0b",
    "metadata": {
     "tags": []
@@ -1235,46 +1377,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "1f8fdaf5-c1df-4ce9-8d7e-7f02089a7191",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "96.8"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "convert_celcius(36, to_units='degrees F')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "84489c9f-dbfd-44c6-bb15-ca57d10dc94a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "309.15"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "convert_celcius(36, to_units='Kelvin')"
    ]
@@ -1359,7 +1479,9 @@
    "id": "166f25ab-a996-4ea8-905a-6d9b6310d7d9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def SQRRT(int)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1416,7 +1538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
