homeowrk upload & updates

--- a/notebooks/Fundamentals_ControlFlow_Functions.ipynb
+++ b/notebooks/Fundamentals_ControlFlow_Functions.ipynb
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8b598fa3-5982-4c6e-a344-b9141e19b6c3",
    "metadata": {
     "tags": []
@@ -1086,12 +1086,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5f286236-ae50-4887-805f-40c4769e0af0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "my_first_function() missing 1 required positional argument: 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmy_first_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: my_first_function() missing 1 required positional argument: 'name'"
+     ]
+    }
+   ],
    "source": [
     "my_first_function()"
    ]
@@ -1108,12 +1120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fbb6d2d5-0b08-4618-9de9-c370027a150f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Becki, this is your first function, woohoo!\n"
+     ]
+    }
+   ],
    "source": [
     "my_first_function(\"Becki\")  ### Pass a string with a name in it to our function, my_first_function"
    ]
@@ -1158,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "ba69b6e6-4728-462a-b7f4-cfdeb8640ece",
    "metadata": {
     "tags": []
@@ -1172,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "9c4bf665-2f62-4b0d-b0b3-1c76aca91ddd",
    "metadata": {
     "tags": []
@@ -1185,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "f5629e56-4fb2-4b90-8a64-2ebeac494f57",
    "metadata": {
     "tags": []
@@ -1197,7 +1217,7 @@
        "278.15"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "34370da9-40d9-4417-9c6e-3eb93c66ff87",
    "metadata": {
     "tags": []
